--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,18 @@
 
 								<h3>Experience</h3>
 
-								<p>2016 to Present Sr. Software Engineer - Apple, San Francisco, Ca</p>
+								<p>2019 to Present Staff Frontend Tech Lead Manager - Slack, San Francisco, Ca</p>
+								<p>
+									<ul>
+										<li>Lead development of Admin / End user UI for installation of API integrations for large enterprise customers</li>
+										<li>Moved legacy XHP interfaes to React and Typescript</li>
+										<li>Gained support for an internal standard for APIs supporting UIs to optmize percieved loading and flexibly scale the amount of data shown in complex datatables</li>
+										<li>Direct impact on product decisions informed by data, organizational priorities, relationships with UX design, and an understanding of architectural opertunities</li>
+										<li>Over a year of direct engineering managment experience prioritizing work, facilitating organization changes, hiring, and managing performance</li>
+									</ul>
+								</p>
+
+								<p>2016 to 2019 Sr. Software Engineer - Apple, San Francisco, Ca</p>
 								<p>
 									<ul>
 										<li>Lead development of the authorization interface for MapKit JS</li>
