--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
 										<li>Moved legacy XHP interfaes to React and Typescript</li>
 										<li>Gained support for an internal standard for APIs supporting UIs to optmize percieved loading and flexibly scale the amount of data shown in complex datatables</li>
 										<li>Direct impact on product decisions informed by data, organizational priorities, relationships with UX design, and an understanding of architectural opertunities</li>
-										<li>Over a year of direct engineering managment experience prioritizing work, facilitating organization changes, hiring, and managing performance</li>
+										<li>Over a year of direct engineering leadership experience prioritizing work, facilitating organization changes, hiring, and managing performance</li>
 									</ul>
 								</p>
 
