--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
 									<ul>
 										<li>Lead development of Admin / End user UI for installation of API integrations for large enterprise customers</li>
 										<li>Moved legacy XHP interfaes to React and Typescript</li>
-										<li>Gained support for an internal standard for APIs supporting UIs to optmize percieved loading and flexibly scale the amount of data shown in complex datatables</li>
+										<li>Gained support for an internal standard for APIs supporting UIs to optimize percieved loading and flexibly scale the amount of data shown in complex user facing datatables</li>
 										<li>Direct impact on product decisions informed by data, organizational priorities, relationships with UX design, and an understanding of architectural opertunities</li>
 										<li>Over a year of direct engineering leadership experience prioritizing work, facilitating organization changes, hiring, and managing performance</li>
 									</ul>
