--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 		<!-- Dear reader, this code was mostly written in 2011. Please judge
 		     code conventions and syntax accordingy. -->
 
-		<title>Resumé of Eric Gelinas, Engineer</title>
+		<title>Resumé of Eric Gelinas, Tech Lead Manager</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 
