--- a/resume.html
+++ b/resume.html
@@ -51,20 +51,30 @@
 
 			<section>
 				<h3>Summary</h3>
-								<p>Over 18 years of web standards focused interface development experience. An uncompromising focus on elegant user interface design and development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high performing server and client Javascript.</p>
+								<p>Over 20 years of web standards focused interface development experience. An uncompromising focus on elegant product development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high performing server and client Javascript.</p>
 
 								<h3>Experience</h3>
+								<h4>2022 to Present: Staff Tech Lead Manager - Slack, San Francisco, CA</h4>
+							            <p>
+							                <ul>
+							                    <li>Continued leadership in frontend development for large-scale projects</li>
+							                    <li>Managed a team of frontend engineers and provided guidance on technical challenges</li>
+							                    <li>Contributed to technical strategy and architectural decisions</li>
+							                    <li>Collaborated with UX design and cross-functional teams to drive product improvements</li>
+							                    <li>Led efforts to improve team productivity and code quality</li>
+							                </ul>
+							            </p>
 
-								<p>2019 to Present Staff Frontend Tech Lead Manager - Slack, San Francisco, Ca</p>
-								<p>
-									<ul>
-										<li>Lead development of Admin / End user UI for installation of API integrations for large enterprise customers</li>
-										<li>Moved legacy XHP interfaes to React and Typescript</li>
-										<li>Gained support for an internal standard for APIs supporting UIs to optimize percieved loading and flexibly scale the amount of data shown in complex user facing datatables</li>
-										<li>Direct impact on product decisions informed by data, organizational priorities, relationships with UX design, and an understanding of architectural opertunities</li>
-										<li>Over a year of direct engineering leadership experience prioritizing work, facilitating organization changes, hiring, and managing performance</li>
-									</ul>
-								</p>
+								<h4>2019 to 2022: Staff Engineer, Frontend - Slack, San Francisco, CA</h4>
+							            <p>
+							                <ul>
+							                    <li>Lead development of Admin / End user UI for installation of API integrations for large enterprise customers</li>
+							                    <li>Moved legacy XHP interfaces to React and Typescript</li>
+							                    <li>Gained support for an internal standard for APIs supporting UIs to optimize perceived loading and flexibly scale the amount of data shown in complex user-facing data tables</li>
+							                    <li>Direct impact on product decisions informed by data, organizational priorities, relationships with UX design, and an understanding of architectural opportunities</li>
+							                    <li>Over a year of direct engineering leadership experience prioritizing work, facilitating organization changes, hiring, and managing performance</li>
+							                </ul>
+							            </p>
 
 								<p>2016 to 2019 Sr. Software Engineer - Apple, San Francisco, Ca</p>
 								<p>
