--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
 					</div>
 					<h2>Standard Pixel</h2>
 				</div>
-				<h1 style="text-align:right;">Resumé of Eric Gelinas, Engineer</h1>
+				<h1 style="text-align:right;">Resumé of Eric Gelinas: Humanizing Technology</h1>
 			</header>
 
 			<section>
