--- a/resume.html
+++ b/resume.html
@@ -16,18 +16,19 @@
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="http://use.typekit.com/tkt0mro.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
     <link rel="stylesheet" href="style/style_domestica_summer.css" type="text/css" media="screen" charset="utf-8">
 
+    <!-- Google Fonts - Roboto -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Existing styles -->
     <style media='print'>
         h2, footer, .typekit-badge, .link-off{display:none !important;}
         body{
             font-size:10pt;
             background: none;
             color: black;
-            font-family: Georgia, serif;
+            font-family: 'Roboto', sans-serif;
             line-height:13pt;
         }
     </style>
