--- a/resume.html
+++ b/resume.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <!-- Dear reader, this code was mostly written in 2011. Please judge
-         code conventions and syntax accordingly. -->
+    <!-- Dear reader, this code was written by hand. Not to say I don't appreciate frameworks and such to develop at scale and collaboritively. I very much do. Sometimes though, it's fun to roll up my sleeves and hammer out some simple HTML. Just for the craft of it <3 -->
 
     <title>Resume of Eric Gelinas: I Make Great Interfaces</title>
     <meta name="description" content="">
