--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
                 </div>
                 <h2>Standard Pixel</h2>
             </div>
-            <h1 style="text-align:right;">Resume of Eric Gelinas: Humanizing Technology</h1>
+            <h1 style="text-align:right;">Resume of Eric Gelinas</h1>
         </header>
 
         <section>
