--- a/resume.html
+++ b/resume.html
@@ -2,19 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-    <!-- Dear reader, this code was written by hand. While I deeply value the convenience and efficiency of using frameworks and collaborative development for scaling projects, there's a special joy in crafting code by hand. I cherish those moments when I roll up my sleeves and work with simple HTML, appreciating the art and craft of web development <3 -->
-
-    <title>Resume of Eric Gelinas: I Make Great Interfaces</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
-
-    <!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 
     <!-- Google Fonts - Roboto -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -22,23 +10,16 @@
     <!-- Existing styles -->
     <link rel="stylesheet" href="style/style_domestica_summer.css" type="text/css" media="screen" charset="utf-8">
 
-    <style media='print'>
-        h2, footer, .typekit-badge, .link-off { display:none !important; }
-        body {
-            font-size: 10pt;
-            background: none;
-            color: black;
-            font-family: 'Roboto', sans-serif;
-            line-height: 13pt;
-        }
-    </style>
+    <title>Resume of Eric Gelinas</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 </head>
 
 <body class="domestica summer">
 
     <div id="container" style="max-width:900px; margin:0 auto;">
         <header>
-            <div id='logo' onclick="document.location.href='/';">
+            <div id='logo'>
                 <div class="illustration">
                     <div class="block-1 first"></div>
                     <div class="block-2"></div>
@@ -49,6 +30,8 @@
             </div>
             <h1 style="text-align:right;">Resume of Eric Gelinas</h1>
         </header>
+
+        <main>
 
         <section>
             <h3>Summary</h3>
@@ -180,6 +163,7 @@
         <section class="link-off">
             <a href="/">...off to StandardPixel.com...</a>
         </section>
+        </main>
 
         <footer>
             <p>Thank you for having a look at my career. This is the best summary I could manage with HTML as a medium. I recommend a real conversation for best results.</p>
