--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,17 @@
     <title>Resume of Eric Gelinas</title>
     <meta name="description" content="">
     <meta name="author" content="">
+
+    <style media='print'>
+        h2, footer, .typekit-badge, .link-off { display:none !important; }
+        body {
+            font-size: 10pt;
+            background: none;
+            color: black;
+            font-family: 'Roboto', sans-serif;
+            line-height: 13pt;
+        }
+    </style>
 </head>
 
 <body class="domestica summer">
