--- a/resume.html
+++ b/resume.html
@@ -52,10 +52,10 @@
             <h4>2022 to Present: Staff Tech Lead Manager - Slack, San Francisco, CA</h4>
             <p>
                 <ul>
-                    <li>Continued leadership in frontend development for large-scale projects</li>
+                    <li>Continued leadership in frontend development for Workflow Builder 2.0</li>
                     <li>Managed a team of frontend engineers and provided guidance on technical challenges</li>
                     <li>Contributed to technical strategy and architectural decisions</li>
-                    <li>Collaborated with UX design and cross-functional teams to drive product improvements</li>
+                    <li>Collaborated with UX design and cross-functional teams to drive product improvements to Slack's next generation platform</li>
                     <li>Led efforts to improve team productivity and code quality</li>
                 </ul>
             </p>
