--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,8 @@
 		<link rel="stylesheet" href="style/style_domestica_summer.css" type="text/css" media="screen" charset="utf-8">
 
 		<style media='print'>
-			h2, footer, .typekit-badge, .link-off{display:none !important;}
+			h2, footer, .link-off{display:none !important;}
+			main {margin-top: 20px;}
 			body{
 				font-size:10pt;
 				background: none;
