--- a/resume.html
+++ b/resume.html
@@ -88,7 +88,7 @@
                 </ul>
             </p>
 
-            <p>2015 to 2016: Web Developer - Dropbox, San Francisco, CA</p>
+            <h4>2015 to 2016: Web Developer - Dropbox, San Francisco, CA</h4>
             <p>
                 <ul>
                     <li>Primary frontend developer on the "Campus Cup" campaign - one of the first production React applications at Dropbox</li>
@@ -101,7 +101,7 @@
                 </ul>
             </p>
 
-            <p>2014 to 2015: Sr. Frontend Engineer / UX Designer - Stamen Design, San Francisco, CA</p>
+            <h4>2014 to 2015: Sr. Frontend Engineer / UX Designer - Stamen Design, San Francisco, CA</h4>
             <p>
                 <ul>
                     <li>Full-stack JavaScript development of <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
@@ -117,7 +117,7 @@
                 </ul>
             </p>
 
-            <p>2009 to 2013: Sr. Frontend Engineer - Flickr, San Francisco, CA</p>
+            <h4>2009 to 2013: Sr. Frontend Engineer - Flickr, San Francisco, CA</h4>
             <p>
                 <ul>
                     <li>Implemented an engineering project management process which was adopted by all project teams</li>
@@ -130,7 +130,7 @@
                 </ul>
             </p>
 
-            <p>2007 to 2009: Frontend Engineer - Yahoo!, Burbank, CA</p>
+            <h4>2007 to 2009: Frontend Engineer - Yahoo!, Burbank, CA</h4>
             <p>
                 <ul>
                     <li>Wrote an extension for the YUI Data Table which inserts contextual data as sub rows</li>
@@ -144,7 +144,7 @@
                 </ul>
             </p>
 
-            <p>2004 to 2007: Markup Engineer - EarthLink, Inc, Pasadena, CA</p>
+            <h4>2004 to 2007: Markup Engineer - EarthLink, Inc, Pasadena, CA</h4>
             <p>
                 <ul>
                     <li>Led interface development of a Map-based search product. Leveraged YUI, Prototype JavaScript Framework, and Scriptaculous frameworks to enhance the search and mapping functionality of the Microsoft Virtual Earth API.</li>
