--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,8 @@
     <meta name="author" content="">
 
     <style media='print'>
-        h2, footer, .typekit-badge, .link-off { display:none !important; }
+        h2, footer, .link-off { display:none !important; }
+        h3 {margin-top: 20px;}
         body {
             font-size: 10pt;
             background: none;
