--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,16 @@
             <p>Over 20 years of web standards-focused interface development experience. An uncompromising focus on elegant product development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high-performing server and client JavaScript.</p>
 
             <h3>Experience</h3>
-            <h4>2022 to Present: Staff Tech Lead Manager - Slack, San Francisco, CA</h4>
+            <h4>2023 to Present: Founding Engineer and Engineering Manager - Noded, Marin, CA</h4>
+            <p>
+                <ul>
+                    <li>Solo development of a web UI using APollo Client, React, and Tailwind</li>
+                    <li>Collaborative product development with the co-founder</li>
+                    <li>Hiring and managment of a team of two Front End Engineers and one Designer</li>
+                </ul>
+            </p>
+
+            <h4>2022 to 2023: Staff Tech Lead Manager - Slack, San Francisco, CA</h4>
             <p>
                 <ul>
                     <li>Continued leadership in frontend development for Workflow Builder 2.0</li>
