--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
             <p>Over 20 years of web standards-focused interface development experience. An uncompromising focus on elegant product development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high-performing server and client JavaScript.</p>
 
             <h3>Experience</h3>
-            <h4>2023 to Present: Founding Engineer and Engineering Manager - Noded, Marin, CA</h4>
+            <h4>2023 to Present: Founding Engineer and Engineering Manager - Noded Ai, Marin, CA</h4>
             <p>
                 <ul>
                     <li>Solo development of a web UI using APollo Client, React, and Tailwind</li>
